--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-tree",
+  "name": "col-rc-tree",
   "version": "4.1.2",
   "description": "tree ui component for react",
   "engines": {
